--- a/css/general.css
+++ b/css/general.css
@@ -5,21 +5,21 @@
 
 @font-face {
     font-family: ProximaNovaRegular;
-    src: url("/fonts/ProximaNova-Reg.otf") format("opentype");
+    src: url("../fonts/ProximaNova-Reg.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: ProximaNovaBold;
-    src: url("/fonts/ProximaNova-Bold.otf") format("opentype");
+    src: url("../fonts/ProximaNova-Bold.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: ProximaNovaExtraBold;
-    src: url("/fonts/ProximaNova-Extrabold.otf") format("opentype");
+    src: url("../fonts/ProximaNova-Extrabold.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
 }
